Demo gradle run tasks now ant based, running multiple applications from different modules via gradle JavaExec did not work due to NoClassDefFoundError
git-svn-id: svn://svn.hafro.is/jminor/trunk@8642 51816742-9f83-410d-85ed-e7bcf7042953